Modified Html and Css file, Create Js file to add audio

--- a/Spotify.html
+++ b/Spotify.html
@@ -120,6 +120,7 @@
                 <i class="fa fa-desktop" aria-hidden="true"></i>
             </div>
         </div>
+        <div class="btn">
         <ul class="list-inline">
             <li><a href="#"><i class="fas fa-random"></i></a></li>
             <li><a href="#"><i class="fas fa-step-backward"></i></i></a></li>
@@ -128,7 +129,18 @@
             <li><a href="#"><i class="fas fa-redo"></i></a></li>
         </ul>
     </div>
+        <div class="line">
+            <div class="col-time" style="text-align: right;" id="timeFirst">00:00</div>
+            <progress class="col-progress" value="0" max="0"></progress>
+            <div class="col-time" style="text-align: left;" id="timeLast"></div>
+        </div>
+    </div>
 
 </footer>
+<div id="screen">
+    <img src="lost.png">
+</div>
+
 </body>
+<script src="JsSpotify.js"></script>
 </html>
