Add playing screen to enhance user experience

--- a/Spotify.html
+++ b/Spotify.html
@@ -100,8 +100,13 @@
     </div>
 
 </footer>
-<div id="screen">
-    <img src="Asset/image/Mck.png">
+<div class="screen ">
+<!--    <i class="fa fa-times" aria-hidden="true"></i>-->
+<!--    <div><a href="#"><i id="backBtn1" class="fas fa-step-backward"></i></i></a></div>-->
+<!--    <div><a href="#"><i id="playBtn1" class="far fa-play-circle"></i></a></div>-->
+<!--    <div><a href="#"><i id="pauseBtn1" class="fa fa-pause" aria-hidden="true"></i></a></div>-->
+<!--    <div><a href="#"><i id="forwardBtn1" class="fas fa-step-forward"></i></a></div>-->
+<!--    <img src="Asset/image/Mck.png">-->
 </div>
 
 </body>
