Update Playing Screen and add features for dark and light buttons

--- a/Spotify.html
+++ b/Spotify.html
@@ -25,7 +25,7 @@
     </div>
 </aside>
 
-<main>
+<main class="main ">
     <div class="container-flex ptb-30 plb-20">
         <div class=" toplist">
             <ul class="list-inline">
@@ -101,12 +101,7 @@
 
 </footer>
 <div class="screen ">
-<!--    <i class="fa fa-times" aria-hidden="true"></i>-->
-<!--    <div><a href="#"><i id="backBtn1" class="fas fa-step-backward"></i></i></a></div>-->
-<!--    <div><a href="#"><i id="playBtn1" class="far fa-play-circle"></i></a></div>-->
-<!--    <div><a href="#"><i id="pauseBtn1" class="fa fa-pause" aria-hidden="true"></i></a></div>-->
-<!--    <div><a href="#"><i id="forwardBtn1" class="fas fa-step-forward"></i></a></div>-->
-<!--    <img src="Asset/image/Mck.png">-->
+
 </div>
 
 </body>
